--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -25,6 +25,9 @@
         <li class="list-group-item d-flex justify-content-between align-items-center">
           Всего постов автора:  <span > {{ post.author.posts.count }} </span>
         </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Всего комментариев к посту:  <span > {{ post.comments.count }} </span>
+        </li>
         <li class="list-group-item">
           <a href="{%url 'posts:profile' post.author.username %}">
             все посты пользователя
