--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -3,9 +3,14 @@
   Профайл пользователя {{ author.get_full_name }}
 {% endblock %} 
 {% block content %}
-{% load thumbnail %}  
+{% load thumbnail %}
+  {% if request.user.username != author.username %}  
   <h1>Все посты пользователя {{ author.get_full_name }} </h1>
+  {% else %}
+  <h1>Все ваши посты</h1>
+  {% endif %}
   <h3>Всего постов: {{ author.posts.count }} </h3>
+  {% if request.user.username != author.username %}
   <div class="mb-5">
     {% if following %}
     <a
@@ -23,6 +28,7 @@
       </a>
    {% endif %}
   </div>
+  {% endif %}
   {% for post in page_obj %}
   {% include 'posts/includes/post_list.html' %} 
     {% if post.group %}
